--- a/style.css
+++ b/style.css
@@ -10,9 +10,7 @@
         font-size: 18px;
         height: 100vh;
         background-color: hsl(185, 75%, 39%);
-        background-image: url(./img/bg-pattern-top.svg), url(./img/bg-pattern-bottom.svg);
-        background-position: left top, right bottom;
-        background-repeat: no-repeat, no-repeat;
+        background-image: url(./img/bg-pattern-top.svg) no-repeat -5.1cm -11cm, url(./img/bg-pattern-bottom.svg) no-repeat 20.4cm  10cm;
         text-align: center;
     }
     
